Version 1.4.0
-----------------------------------------------------------------
7 February 2007
+ Core dependency raised to 1.4.0.

5 February 2007
+ Added missing comma after image_id column

1 February 2007
+ Added ability to place images on blog entries without editor.

26 January 2007
+ Finished pagination of blog view
+ Removed test code
+ Updated files: templates/list_view.tpl

25 January 2007
+ Added pagination to blog view

19 January 2007
+ Added a setting to enable/disable the blog view caching.
+ Added link to reset the view cache.
+ Updated files : templates/settings.tpl


Version 1.3.0 - unreleased
------------------------------------------------------------------
10 January 2007
+ Added Version module requirement
+ Added ability for anonymous and users without blog permission to
  submit entries for later approval.
+ Added setting to allow anonymous submission.
+ Updated files: templates/edit.tpl, templates/settings.tpl,
  templates/submit.tpl, templates/user_main.tpl

Version 1.2.3
------------------------------------------------------------------
27 November 2006
+ Making call to resetKeywords in search.
+ Depends on latest search version

Version 1.2.2
------------------------------------------------------------------
10 November 2006
+ Entry viewing now adds the blog title to the page title.

3 November 2007
+ Cache was not saving the blog content correctly.

Version 1.2.1
------------------------------------------------------------------
2 November 2006
+ Updated files templates/past_view.tpl, templates/recent_view.tpl,
  templates/settings.tpl
+ Changed css classes to ids
+ Fixed typo in settings.tpl

31 October 2006
+ Added an error check to avoid a message when no entries have been
  created
+ Changed default settings

Version 1.2.0
------------------------------------------------------------------
27 October 2006
+ Added a settings tab and form
+ Through settings, can control number of current and past entries to