@@ -5,6 +5,7 @@
    * @author Matthew McNaney <mcnaney at appstate dot edu>
    */
 
+translate('blog');
 $link[] = array('label'       => 'Blog',
 		'restricted'  => TRUE,
 		'url'         => 'index.php?module=blog&amp;action=admin',
@@ -12,5 +13,5 @@ $link[] = array('label'       => 'Blog',
 		'image'       => 'blog.png',
 		'tab'         => 'content'
 		);
-
+translate();
 ?>
