@@ -3,7 +3,7 @@
    * @author Matthew McNaney <mcnaney at gmail dot com>
    * @version $Id$
    */
-
+translate('blog');
 
 $use_permissions = TRUE;
 $item_permissions = TRUE;
@@ -11,5 +11,7 @@ $item_permissions = TRUE;
 $permissions['edit_blog']   = _('Edit blog');
 $permissions['delete_blog'] = _('Delete blog');
 $permissions['settings']    = _('Change settings (Unrestricted only)');
+
+translate();
 
 ?>
