@@ -10,6 +10,7 @@ PHPWS_Core::initCoreClass('Form.php');
 class Blog_Form {
     function edit(&$blog, $version_id=NULL, $limited=false)
     {
+        translate('blog');
         $form = new PHPWS_Form;
         $form->addHidden('module', 'blog');
 
@@ -86,11 +87,13 @@ class Blog_Form {
         $template = $form->getTemplate();
 
         $template['EXAMPLE'] = 'YYMMDD HH:MM';
+        translate();
         return PHPWS_Template::process($template, 'blog', 'edit.tpl');
     }
 
     function settings()
     {
+        translate('blog');
         $form = new PHPWS_Form;
         $form->addHidden('module', 'blog');
         $form->addHidden('action', 'admin');
@@ -152,7 +155,7 @@ class Blog_Form {
         }
 
         $template['PAST_NOTE'] = _('Set to zero to prevent display');
-
+        translate();
         return PHPWS_Template::process($template, 'blog', 'settings.tpl');
     }
 }
