@@ -1,5 +1,8 @@
 Version 1.4.0
 -----------------------------------------------------------------
+13 February 2007
++ Added translate function calls to various files
+
 7 February 2007
 + Core dependency raised to 1.4.0.
 
